--- a/index.html
+++ b/index.html
@@ -3,42 +3,154 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/0faa74c727.js"
+      crossorigin="anonymous"
+    ></script>
     <title>ohmyfood</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
     <header>
       <img
         src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/logo/ohmyfood.png"
       />
-
-      <div class="search-bar">
-        <img src="Images+et+textes+Ohmyfood/Icon/Pin.png" />
-
-        <input type="search" value="Paris , Belleville" />
-      </div>
     </header>
-
-    <div class="search-button">
-      <h1>Réservez le menu qui vous convient</h1>
-      <p>Découvrez des restaurantrs d'exception, sélectionnés par nos soins.</p>
+    <div class="head-mobile">
+      <nav class="navbar">
+        <form class="search-bar">
+          <img src="Images+et+textes+Ohmyfood/Icon/Pin.png" />
+          <input
+            type="text"
+            class="bold"
+            id="search"
+            placeholder="Paris, Belleville"
+          />
+        </form>
+        <div class="search">
+          <h1>Réservez le menu qui vous convient</h1>
+          <p>
+            Découvrez des restaurants d'exception, sélectionnés par nos soins.
+          </p>
+          <div class="btn-explore">
+            <label>Explorer nos restaurants</label>
+          </div>
+        </div>
+      </nav>
     </div>
 
-    <h2>Fonctionnement</h2>
-    <p>Choisissez un restaurant</p>
-    <p>Composez votre menu</p>
-    <p>Dégustez au restaurant</p>
+    <main>
+      <section class="filter">
+        <h2>Fonctionnement</h2>
+        <div class="menu">
+          <div class="btn-1">
+            <span>1</span>
+            <i class="choix1 fa-solid fa-mobile-screen-button"></i>
+            <p>Choisissez un restaurant</p>
+          </div>
 
-    <h2>Restaurants</h2>
+          <div class="btn-1">
+            <span>2</span>
+            <i class="choix2 fa-solid fa-list"></i>
+            <p>Composez votre menu</p>
+          </div>
 
-    <div class="restaurants">
-      <img src="" />
+          <div class="btn-1">
+            <span>3</span>
+            <i class="choix3 fa-sharp fa-solid fa-store"></i>
+            <p>Dégustez au restaurant</p>
+          </div>
+        </div>
+      </section>
 
-      <img src="" />
+      <section class="restaurants">
+        <h2>Restaurants</h2>
 
-      <img src="" />
+        <div class="restaurants-container">
+          <article class="card">
+            <img
+              src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            />
+            <div class="card-content">
+              <h3>La palette du goût</h3>
+              <p>Ménilmontant</p>
+            </div>
+            <div class="layout-star">
+              <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart"></i>
+            </div>
+            <span>Nouveau</span>
+          </article>
 
-      <img src="" />
-    </div>
-    <footer></footer>
+          <article class="card">
+            <img
+              src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+            />
+            <div class="card-content">
+              <h3>Le délice des sens</h3>
+              <p>Folie-Méricourt</p>
+            </div>
+            <div class="layout-star">
+              <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart"></i>
+            </div>
+          </article>
+
+          <article class="card">
+            <img
+              src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+            />
+            <div class="card-content">
+              <h3>La note enchantée</h3>
+              <p>Charonne</p>
+            </div>
+            <div class="layout-star">
+              <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart"></i>
+            </div>
+            <span>Nouveau</span>
+          </article>
+
+          <article class="card">
+            <img
+              src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+            />
+            <div class="card-content">
+              <h3>A la française</h3>
+              <p>Cité rouge</p>
+            </div>
+            <div class="layout-star">
+              <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart"></i>
+            </div>
+          </article>
+        </div>
+      </section>
+      <footer>
+        <h4><a href="#">ohmyfood</a></h4>
+        <div class="footer-content">
+          <p>
+            <a href="mailto:contact@ofmyfood.com">Contact</a>
+          </p>
+          <p>Mentions légales</p>
+
+          <p>
+            <i class="fa-solid fa-handshake-angle"></i>
+            Devenir partenaire
+          </p>
+          <p>
+            <i class="fa-solid fa-utensils"></i>
+            Proposer un restaurant
+          </p>
+        </div>
+      </footer>
+    </main>
   </body>
 </html>
