--- a/page2.html
+++ b/page2.html
@@ -3,85 +3,153 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ohmyfood</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="restaurant à la française" />
+    <link rel="stylesheet" href="page2.css" />
+    <script
+      src="https://kit.fontawesome.com/0faa74c727.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>A la française</title>
   </head>
+
   <body>
     <header>
-      <img
-        src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/logo/ohmyfood.png"
-      />
+      <div>
+        <div class="logo">
+          <!-- lien de retour vers la page principale -->
+          <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        </div>
+        <div class="title">
+          <h1>ohmyfood</h1>
+        </div>
+      </div>
     </header>
 
-    <div class="menu">
-      <h3>La palette du goût</h3>
-
-      <div class="enter">
-        <h4>ENTREES</h4>
-
-        <div class="card">
-          <h5>Fricassée d'escargots</h5>
-          <p>Au piment d'Espelette</p>
-          25€
+    <main>
+      <img
+        src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+        alt="a la française"
+      />
+      <div class="main-container">
+        <div class="title-menu">
+          <h1>À la française</h1>
+          <div class="layout-star">
+            <i class="fa-regular fa-heart"></i>
+          </div>
         </div>
 
-        <div class="card">
-          <h5>Foie gras de canard mi-cuit</h5>
-          <p>Et ses copeaux de truffe noire</p>
-          35€
+        <form class="menu">
+          <section>
+            
+            <div class="starter">
+              <h3><span>ENTRÉES</span></h3>
+
+              <article class="card">
+                <div class="card-content">
+                  <h4>Tarte de pouple acidulé</h4>
+                  <p>Aux zests d'orange</p>
+                </div>
+                <div class="prix"><p>25€</p></div>
+              </article>
+
+              <article class="card">
+                <div class="card-content">
+                  <h4>Velouté de légumes d'antan</h4>
+                  <p>Carottes, panais, topinambour</p>
+                </div>
+                <div class="prix"><p>35€</p></div>
+              </article>
+
+              <article class="card">
+                <div class="card-content">
+                  <h4>Soupe à l'oignon</h4>
+                  <p>Revisitée</p>
+                </div>
+                <div class="prix"><p>20€</p></div>
+              </article>
+            </div>
+
+            <div class="dish">
+              <h3><span>PLATS</span></h3>
+
+              <article class="card">
+                <div class="card-content">
+                  <h4>Coquilles Saint-Jacques</h4>
+                  <p>Accompagnées d'une purée de panais</p>
+                </div>
+                <div class="prix"><p>40€</p></div>
+              </article>
+
+              <article class="card">
+                <div class="card-content">
+                  <h4>Magret de canard</h4>
+                  <p>Et parmentier de pommes de terres</p>
+                </div>
+                <div class="prix"><p>35€</p></div>
+              </article>
+
+              <article class="card">
+                <div class="card-content">
+                  <h4>Pigeonneau d'Ille-et-Vilaine</h4>
+                  <p>Sur son lit de gnocchis aux légumes</p>
+                </div>
+                <div class="prix"><p>44€</p></div>
+              </article>
+            </div>
+
+            <div class="dessert">
+              <h3><span>DÉSSERTS</span></h3>
+
+              <article class="card">
+                <div class="card-content">
+                  <h4>Pétales de violettes glacés</h4>
+                  <p>Et purée de noisettes</p>
+                </div>
+                <div class="prix"><p>18€</p></div>
+              </article>
+
+              <article class="card">
+                <div class="card-content">
+                  <h4>Fondant au chocolat</h4>
+                  <p>Revisité</p>
+                </div>
+                <div class="prix"><p>22€</p></div>
+              </article>
+
+              <article class="card">
+                <div class="card-content">
+                  <h4>Millefeuille croustillant</h4>
+                  <p>Myrtilles et pâte d'amande</p>
+                </div>
+                <div class="prix"><p>23€</p></div>
+              </article>
+            </div>
+
+            <div class="btn-explore">
+              <label>Commander</label>
+            </div>
+          </section>
+        </form>
+      </div>
+      <footer>
+        <h4><a href="#">ohmyfood</a></h4>
+        <div class="footer-content">
+          <p>
+            <a href="mailto:contact@ofmyfood.com">Contact</a>
+          </p>
+          <p>Mentions légales</p>
+
+          <p>
+            <i class="fa-solid fa-handshake-angle"></i>
+            Devenir partenaire
+          </p>
+          <p>
+            <i class="fa-solid fa-utensils"></i>
+            Proposer un restaurant
+          </p>
         </div>
-
-        <div class="card">
-          <h5>Œuf au plat</h5>
-          <p>Assaisonné à la truffe sur lit de caviar</p>
-          20€
-        </div>
-      </div>
-
-      <h4>PLATS</h4>
-
-      <div class="card">
-        <h5>Filet de bœuf aux herbes</h5>
-        <p>Accompagné de sa ribambelle de légumes</p>
-        40€
-      </div>
-
-      <div class="card">
-        <h5>Parmentier de queue de bœuf</h5>
-        <p>À la truffe noire sur sa purée de panais</p>
-        35€
-      </div>
-
-      <div class="card">
-        <h5>Filet de turbot</h5>
-        <p>Aux agrumes</p>
-        44€
-      </div>
-
-      <h4>DESSERTS</h4>
-
-      <div class="card">
-        <h5>Paris-Brest</h5>
-        <p>Revisité</p>
-        18€
-      </div>
-
-      <div class="card">
-        <h5>Macaron au chocolat d'exception</h5>
-        <p>Et glace à la vanille de Madagascar</p>
-        22€
-      </div>
-
-      <div class="card">
-        <h5>Mousse au chocolat</h5>
-        <p>Au piment d'Espelette et à la truffe noire</p>
-        23€
-      </div>
-
-      <div class="command-button">
-        <p>Commander</p>
-      </div>
-    </div>
-
-    <footer></footer>
+      </footer>
+    </main>
   </body>
 </html>
