--- a/page2.html
+++ b/page2.html
@@ -24,17 +24,20 @@
   <body>
     <header>
       <div class="logo">
-        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <img
+          src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/logo/ohmyfood.png"
+          alt="Logo Ohmyfood"
+        />
+        <a href="./index.html">
+          <i class="fas fa-arrow-left"></i>
+        </a>
       </div>
-      <img
-        src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/logo/ohmyfood.png"
-      />
     </header>
 
     <main>
       <img
         src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-        alt="a la française"
+        alt="A la française"
       />
       <div class="main-container">
         <div class="title-menu">
@@ -140,7 +143,16 @@
                     <h4>Millefeuille croustillant</h4>
                     <p>Myrtilles et pâte d'amande</p>
                   </div>
-                  <div class="prix"><p>23€</p></div>
+
+                  <div class="prix">
+                    <p>23€</p>
+                  </div>
+                </div>
+
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
                 </div>
               </article>
             </div>
@@ -160,14 +172,16 @@
           </p>
           <p>Mentions légales</p>
 
-          <p>
-            <i class="fa-solid fa-handshake-angle"></i>
-            Devenir partenaire
-          </p>
-          <p>
-            <i class="fa-solid fa-utensils"></i>
-            Proposer un restaurant
-          </p>
+          <div class="footer-text">
+            <p>
+              <i class="fa-solid fa-handshake-angle"></i>
+              Devenir partenaire
+            </p>
+            <p>
+              <i class="fa-solid fa-utensils"></i>
+              Proposer un restaurant
+            </p>
+          </div>
         </div>
       </footer>
     </main>
