--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -23,8 +27,9 @@
         src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/logo/ohmyfood.png"
       />
     </header>
-    <div class="head-mobile">
-      <nav class="navbar">
+
+    <nav class="navbar">
+      <div class="head-mobile">
         <form class="search-bar">
           <img src="Images+et+textes+Ohmyfood/Icon/Pin.png" />
           <input
@@ -43,8 +48,8 @@
             <label>Explorer nos restaurants</label>
           </div>
         </div>
-      </nav>
-    </div>
+      </div>
+    </nav>
 
     <main>
       <section class="filter">
@@ -71,89 +76,90 @@
       </section>
 
       <section class="restaurants">
-        <h2>Restaurants</h2>
+        <div class="restaurants-title">
+          <h2>Restaurants</h2>
+        </div>
 
         <div class="restaurants-container">
           <article class="card">
-            <div class="restaurant-image">
+            <a href="page3.html">
               <img
                 src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                alt="La palette du goût"
               />
-              <div class="btn-new">Nouveau</div>
-            </div>
-            <div class="card-content">
-              <h3>La palette du goût</h3>
-              <p>Ménilmontant</p>
-            </div>
-
-            <div class="heart">
-              <div class="heart__1">
-                <i class="far fa-heart fa-2x"></i>
+              <span>Nouveau</span>
+              <div class="card-content">
+                <div class="card-text">
+                  <h3>La palette du goût</h3>
+                  <p>Ménilmontant</p>
+                </div>
+                <div class="heart-star">
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-solid fa-heart"></i>
+                </div>
               </div>
-              <div class="heart__2">
-                <i class="fas fa-heart fa-2x"></i>
-              </div>
-            </div>
+            </a>
           </article>
 
           <article class="card">
-            <img
-              src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-            />
-            <div class="card-content">
-              <h3>Le délice des sens</h3>
-              <p>Folie-Méricourt</p>
-            </div>
-            <div class="heart">
-              <div class="heart__1">
-                <i class="far fa-heart fa-2x"></i>
-              </div>
-              <div class="heart__2">
-                <i class="fas fa-heart fa-2x"></i>
-              </div>
-            </div>
-          </article>
-
-          <article class="card">
-            <div class="restaurant-image">
+            <a href="page4.html">
               <img
                 src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                alt="La note enchantée"
               />
-              <div class="btn-new">Nouveau</div>
-            </div>
-            <div class="card-content">
-              <h3>La note enchantée</h3>
-              <p>Charonne</p>
-            </div>
-            <div class="heart">
-              <div class="heart__1">
-                <i class="far fa-heart fa-2x"></i>
+              <div class="card-content">
+                <div class="card-text">
+                  <h3>La note enchantée</h3>
+                  <p>Charonne</p>
+                </div>
+                <div class="heart-star">
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-solid fa-heart"></i>
+                </div>
               </div>
-              <div class="heart__2">
-                <i class="fas fa-heart fa-2x"></i>
-              </div>
-            </div>
+              <span>Nouveau</span>
+            </a>
           </article>
 
           <article class="card">
-            <img
-              src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-            />
-            <div class="card-content">
-              <h3>A la française</h3>
-              <p>Cité rouge</p>
-            </div>
-            <div class="heart">
-              <div class="heart__1">
-                <i class="far fa-heart fa-2x"></i>
+            <a href="page2.html">
+              <img
+                src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                alt="A la française"
+              />
+              <div class="card-content">
+                <div class="card-text">
+                  <h3>A la française</h3>
+                  <p>Cité Rouge</p>
+                </div>
+                <div class="heart-star">
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-solid fa-heart"></i>
+                </div>
               </div>
-              <div class="heart__2">
-                <i class="fas fa-heart fa-2x"></i>
+            </a>
+          </article>
+          <article class="card">
+            <a href="page5.html">
+              <img
+                src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                alt="Le délice des sens"
+              />
+              <div class="card-content">
+                <div class="card-text">
+                  <h3>Le délice des sens</h3>
+                  <p>Folie-Méricourt</p>
+                </div>
+                <div class="heart-star">
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-solid fa-heart"></i>
+                </div>
               </div>
-            </div>
+            </a>
           </article>
         </div>
       </section>
+
       <footer>
         <h4 class="logo-footer">ohmyfood</h4>
         <div class="footer-content">
@@ -162,14 +168,16 @@
           </p>
           <p>Mentions légales</p>
 
-          <p>
-            <i class="fa-solid fa-handshake-angle"></i>
-            Devenir partenaire
-          </p>
-          <p>
-            <i class="fa-solid fa-utensils"></i>
-            Proposer un restaurant
-          </p>
+          <div class="footer-text">
+            <p>
+              <i class="fa-solid fa-handshake-angle"></i>
+              Devenir partenaire
+            </p>
+            <p>
+              <i class="fa-solid fa-utensils"></i>
+              Proposer un restaurant
+            </p>
+          </div>
         </div>
       </footer>
     </main>
