--- a/page4.html
+++ b/page4.html
@@ -24,17 +24,20 @@
   <body>
     <header>
       <div class="logo">
-        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <img
+          src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/logo/ohmyfood.png"
+          alt="Logo Ohmyfood"
+        />
+        <a href="./page3.html">
+          <i class="fas fa-arrow-left"></i>
+        </a>
       </div>
-      <img
-        src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/logo/ohmyfood.png"
-      />
     </header>
 
     <main>
       <img
         src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-        alt="a la française"
+        alt="La note enchantée"
       />
       <div class="main-container">
         <div class="title-menu">
@@ -172,14 +175,16 @@
           </p>
           <p>Mentions légales</p>
 
-          <p>
-            <i class="fa-solid fa-handshake-angle"></i>
-            Devenir partenaire
-          </p>
-          <p>
-            <i class="fa-solid fa-utensils"></i>
-            Proposer un restaurant
-          </p>
+          <div class="footer-text">
+            <p>
+              <i class="fa-solid fa-handshake-angle"></i>
+              Devenir partenaire
+            </p>
+            <p>
+              <i class="fa-solid fa-utensils"></i>
+              Proposer un restaurant
+            </p>
+          </div>
         </div>
       </footer>
     </main>
