--- a/page3.html
+++ b/page3.html
@@ -24,10 +24,7 @@
   <body>
     <header>
       <div class="logo">
-        <img
-          src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/logo/ohmyfood.png"
-          alt="Logo Ohmyfood"
-        />
+        <img src="images/logos/ohmyfood.png" alt="Logo Ohmyfood" />
         <a href="./page2.html">
           <i class="fas fa-arrow-left"></i>
         </a>
@@ -36,7 +33,7 @@
 
     <main>
       <img
-        src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+        src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
         alt="La palette du goût"
       />
       <div class="main-container">
@@ -59,6 +56,11 @@
                   </div>
                   <div class="prix"><p>25€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -69,6 +71,11 @@
                   </div>
                   <div class="prix"><p>35€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -78,6 +85,11 @@
                     <p>Assaisonné à la truffe sur lit de caviar</p>
                   </div>
                   <div class="prix"><p>20€</p></div>
+                </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
                 </div>
               </article>
             </div>
@@ -93,6 +105,11 @@
                   </div>
                   <div class="prix"><p>40€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -103,6 +120,11 @@
                   </div>
                   <div class="prix"><p>35€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -112,6 +134,11 @@
                     <p>Aux agrumes</p>
                   </div>
                   <div class="prix"><p>44€</p></div>
+                </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
                 </div>
               </article>
             </div>
@@ -127,6 +154,11 @@
                   </div>
                   <div class="prix"><p>18€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -135,6 +167,11 @@
                     <h4>Macaron au chocolat d'exception</h4>
                   </div>
                   <div class="prix"><p>22€</p></div>
+                </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
                 </div>
               </article>
 
@@ -145,6 +182,11 @@
                     <p>Myrtilles et pâte d'amande</p>
                   </div>
                   <div class="prix"><p>23€</p></div>
+                </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
                 </div>
               </article>
             </div>
