--- a/page4.html
+++ b/page4.html
@@ -24,10 +24,7 @@
   <body>
     <header>
       <div class="logo">
-        <img
-          src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/logo/ohmyfood.png"
-          alt="Logo Ohmyfood"
-        />
+        <img src="images/logos/ohmyfood.png" alt="Logo Ohmyfood" />
         <a href="./page3.html">
           <i class="fas fa-arrow-left"></i>
         </a>
@@ -36,7 +33,7 @@
 
     <main>
       <img
-        src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+        src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
         alt="La note enchantée"
       />
       <div class="main-container">
@@ -59,6 +56,11 @@
                   </div>
                   <div class="prix"><p>25€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -68,6 +70,11 @@
                     <p>Sur blini à la farine de blé noir</p>
                   </div>
                   <div class="prix"><p>35€</p></div>
+                </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
                 </div>
               </article>
 
@@ -79,6 +86,11 @@
                   </div>
                   <div class="prix"><p>20€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -88,6 +100,11 @@
                     <p>Confiture de figue et pain toasté</p>
                   </div>
                   <div class="prix"><p>20€</p></div>
+                </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
                 </div>
               </article>
             </div>
@@ -103,6 +120,11 @@
                   </div>
                   <div class="prix"><p>40€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -113,6 +135,11 @@
                   </div>
                   <div class="prix"><p>35€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -122,6 +149,11 @@
                     <p>Et riz sauvage aux zestes de citron</p>
                   </div>
                   <div class="prix"><p>44€</p></div>
+                </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
                 </div>
               </article>
             </div>
@@ -137,6 +169,11 @@
                   </div>
                   <div class="prix"><p>18€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -147,6 +184,11 @@
                   </div>
                   <div class="prix"><p>22€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -156,6 +198,11 @@
                     <p>Déstructurée</p>
                   </div>
                   <div class="prix"><p>23€</p></div>
+                </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
                 </div>
               </article>
             </div>
