--- a/index.html
+++ b/index.html
@@ -23,15 +23,13 @@
 
   <body>
     <header>
-      <img
-        src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/logo/ohmyfood.png"
-      />
+      <img src="images/logos/ohmyfood.png" />
     </header>
 
     <nav class="navbar">
       <div class="head-mobile">
         <form class="search-bar">
-          <img src="Images+et+textes+Ohmyfood/Icon/Pin.png" />
+          <img src="images/logos/Pin.png" />
           <input
             type="text"
             class="bold"
@@ -84,7 +82,7 @@
           <article class="card">
             <a href="page3.html">
               <img
-                src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="La palette du goût"
               />
               <span>Nouveau</span>
@@ -104,7 +102,7 @@
           <article class="card">
             <a href="page4.html">
               <img
-                src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 alt="La note enchantée"
               />
               <div class="card-content">
@@ -124,7 +122,7 @@
           <article class="card">
             <a href="page2.html">
               <img
-                src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                 alt="A la française"
               />
               <div class="card-content">
@@ -142,7 +140,7 @@
           <article class="card">
             <a href="page5.html">
               <img
-                src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 alt="Le délice des sens"
               />
               <div class="card-content">
