--- a/page2.html
+++ b/page2.html
@@ -24,10 +24,7 @@
   <body>
     <header>
       <div class="logo">
-        <img
-          src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/logo/ohmyfood.png"
-          alt="Logo Ohmyfood"
-        />
+        <img src="images/logos/ohmyfood.png" alt="Logo Ohmyfood" />
         <a href="./index.html">
           <i class="fas fa-arrow-left"></i>
         </a>
@@ -36,7 +33,7 @@
 
     <main>
       <img
-        src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+        src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
         alt="A la française"
       />
       <div class="main-container">
@@ -57,6 +54,11 @@
                   </div>
                   <div class="prix"><p>25€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -67,6 +69,11 @@
                   </div>
                   <div class="prix"><p>35€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -76,6 +83,11 @@
                     <p>Revisitée</p>
                   </div>
                   <div class="prix"><p>20€</p></div>
+                </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
                 </div>
               </article>
             </div>
@@ -91,6 +103,11 @@
                   </div>
                   <div class="prix"><p>40€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -101,6 +118,11 @@
                   </div>
                   <div class="prix"><p>35€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -110,6 +132,11 @@
                     <p>Sur son lit de gnocchis aux légumes</p>
                   </div>
                   <div class="prix"><p>44€</p></div>
+                </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
                 </div>
               </article>
             </div>
@@ -125,6 +152,11 @@
                   </div>
                   <div class="prix"><p>18€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -134,6 +166,11 @@
                     <p>Revisité</p>
                   </div>
                   <div class="prix"><p>22€</p></div>
+                </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
                 </div>
               </article>
 
