--- a/page5.html
+++ b/page5.html
@@ -24,10 +24,7 @@
   <body>
     <header>
       <div class="logo">
-        <img
-          src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/logo/ohmyfood.png"
-          alt="Logo Ohmyfood"
-        />
+        <img src="images/logos/ohmyfood.png" alt="Logo Ohmyfood" />
         <a href="./page4.html">
           <i class="fas fa-arrow-left"></i>
         </a>
@@ -36,7 +33,7 @@
 
     <main>
       <img
-        src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+        src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
         alt="Le délice des sens"
       />
       <div class="main-container">
@@ -59,6 +56,11 @@
                   </div>
                   <div class="prix"><p>25€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -69,6 +71,11 @@
                   </div>
                   <div class="prix"><p>35€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -78,6 +85,11 @@
                     <p>Aux truffes</p>
                   </div>
                   <div class="prix"><p>20€</p></div>
+                </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
                 </div>
               </article>
             </div>
@@ -93,6 +105,11 @@
                   </div>
                   <div class="prix"><p>40€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -103,6 +120,11 @@
                   </div>
                   <div class="prix"><p>35€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -112,6 +134,11 @@
                     <p>Et sa purée de panais</p>
                   </div>
                   <div class="prix"><p>44€</p></div>
+                </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
                 </div>
               </article>
             </div>
@@ -127,6 +154,11 @@
                   </div>
                   <div class="prix"><p>18€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -137,6 +169,11 @@
                   </div>
                   <div class="prix"><p>22€</p></div>
                 </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
               </article>
 
               <article class="card-menu">
@@ -146,6 +183,11 @@
                     <p>À la noisette</p>
                   </div>
                   <div class="prix"><p>23€</p></div>
+                </div>
+                <div class="btn-card">
+                  <div class="circle">
+                    <i class="fas fa-check"></i>
+                  </div>
                 </div>
               </article>
             </div>
